<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mskapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_ajustes"
        android:orderInCategory="100"
        android:title="@string/menu_ajustes"
        mskapp:showAsAction="never" />
    <item
        android:id="@+id/menu_sobre"
        android:orderInCategory="100"
        android:title="@string/menu_sobre"
        mskapp:showAsAction="never" />
    <item
        android:id="@+id/botao_filtrar"
        android:icon="@drawable/ic_filter_list_white"
        android:orderInCategory="1"
        android:title="@string/titulo_filtro"
        mskapp:showAsAction="always" />
    <item
        android:id="@+id/botao_pesquisar"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="2"
        android:title="@string/titulo_pesquisar"
        mskapp:showAsAction="always" />

</menu>